--- a/RPG-System/RPG/RPG.vcxproj
+++ b/RPG-System/RPG/RPG.vcxproj
@@ -76,12 +76,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="addObject.h" />
     <ClInclude Include="Attack.h" />
     <ClInclude Include="AttackAgainst.h" />
     <ClInclude Include="AttackFactory.h" />
     <ClInclude Include="Bank.h" />
     <ClInclude Include="Bar.h" />
     <ClInclude Include="BasicAttack.h" />
+    <ClInclude Include="BulletAttack.h" />
     <ClInclude Include="ChangeMap.h" />
     <ClInclude Include="Chest.h" />
     <ClInclude Include="Controller.h" />
@@ -131,9 +133,12 @@
     <ClInclude Include="Utility.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="addObject.cpp" />
     <ClCompile Include="Attack.cpp" />
     <ClCompile Include="AttackAgainst.cpp" />
     <ClCompile Include="Bar.cpp" />
+    <ClCompile Include="BasicAttack.cpp" />
+    <ClCompile Include="BulletAttack.cpp" />
     <ClCompile Include="Control.cpp" />
     <ClCompile Include="Controller.cpp" />
     <ClCompile Include="Dialog.cpp" />
@@ -153,7 +158,6 @@
     <ClCompile Include="MainMenu.cpp" />
     <ClCompile Include="Map.cpp" />
     <ClCompile Include="Movement.cpp" />
-    <ClCompile Include="NoMovement.cpp" />
     <ClCompile Include="NPC.cpp" />
     <ClCompile Include="Parser.cpp" />
     <ClCompile Include="RandMovement.cpp" />
