--- a/RPG-System/RPG/RPG.vcxproj
+++ b/RPG-System/RPG/RPG.vcxproj
@@ -93,9 +93,9 @@
     <ClInclude Include="EmptyState.h" />
     <ClInclude Include="Control.h" />
     <ClInclude Include="Enemy.h" />
-    <ClInclude Include="EyeFollowIdMovement.h" />
     <ClInclude Include="FadeEffect.h" />
     <ClInclude Include="Flag.h" />
+    <ClInclude Include="FollowIdMovement.h" />
     <ClInclude Include="Pause.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="GiveItem.h" />
