--- a/RPG-System/RPG/RPG.vcxproj.filters
+++ b/RPG-System/RPG/RPG.vcxproj.filters
@@ -261,6 +261,9 @@
     <ClInclude Include="ScrolledUpTextState.h">
       <Filter>Header Files\States</Filter>
     </ClInclude>
+    <ClInclude Include="EndingScript.h">
+      <Filter>Header Files\Scripts</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -394,6 +397,9 @@
     </ClCompile>
     <ClCompile Include="ScrolledUpTextState.cpp">
       <Filter>Source Files\States</Filter>
+    </ClCompile>
+    <ClCompile Include="EndingScript.cpp">
+      <Filter>Source Files\Scripts</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
